--- a/views/templateLogin.erb
+++ b/views/templateLogin.erb
@@ -10,10 +10,10 @@
       
         <form method='post' action="/login">
            <p>
-            userID:<input name="id" type="text" value="<%=@id%>" autocomplete="off">
+            username:<input name="name" type="text" value="<%=@name%>" autocomplete="off">
             </p>
             <p>
-            name:<input name="name" type="text" value="<%=@name%>">
+            password:<input name="password" type="password" value="<%=@password%>" autocomplete="off">
             </p>
             <input type="submit" value="log in">
         </form>
