--- a/views/logout.erb
+++ b/views/logout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
     <head>
-       <title>goddbuy page</title>
+       <title>goodbye page</title>
     </head>
     <body>
         <p>You can log out now</p>
