--- a/views/logout.erb
+++ b/views/logout.erb
@@ -1,12 +1,34 @@
 <!DOCTYPE>
-<html>
-    <head>
-       <title>goodbye page</title>
-    </head>
-    <body>
-        <p>You can log out now</p>
-        <form  methood='get' action='/'>
-           <input type="submit" value="logout">  
-        </form>      
-    </body>
+<html lang="en">
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <title>Bookmark Manager</title>
+  <link href="css/general.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<header>
+		<h1>Bookmark Manager</h1>
+	</header>
+    <nav>
+        <a href="/login">Log In</a>
+		<a href="/register">Register</a>
+        <a href="/">Home</a>
+	</nav>
+	<main>
+		<div class="contentSmallForm">
+			<h2>Logged Out</h2>
+			<p>You have succesfully logged out.</p>
+			<p>Thank you for using Bookmark Manager</p>
+	</main>
+	<footer>
+		<ul>
+			<li><a href="/">Back to homepage</a></li>
+		</ul>
+		<hr>
+		<p>COM1001, 2020</p>
+	</footer>
+
+</body>
 </html>
