added CSS to adding bookmarks page

--- a/views/adding_bookmarks.erb
+++ b/views/adding_bookmarks.erb
@@ -1,47 +1,41 @@
-
 <!DOCTYPE>
-<html>
-    <head>
-       <title>Adding Bookmarks</title>
-    </head>
-    <body>
-        <h1><u>Adding BookMarks</u></h1>
-        
-        <form method="post" action="/adding_bookmark">
-            <table>
-                <tr>
-                    <td>Title<input name="bm_title" type="text" value=""></td>
-                </tr>
-               
-                <tr>
-                    <td>Content<input name="bm_content" type="text" value=""></td>
-                </tr>
-                <tr>
-                    <td>Description<input name="bm_description" type="text" value=""></td>
-                </tr>
-                <tr>
-                    <td>Author<input name="bm_author" type="text" value=""></td>
-                </tr>
-                <tr>
-                    <td>Date Created<input name="bm_date" type="text" value=""> </td>
-                </tr>
-                <tr>
-                    <td>Rating<input name="bm_rating" type="text" value=""></td>
-                </tr>
-                <tr>
-                    <td>Num_of_rating<input name="bm_num_of_rating" type="text" value=""> </td>
-                </tr>
-                <tr>
-                    <td>Reported<input name="bm_reported" type="text" value="">  </td>
-                </tr>
-            </table>
-            <input type="submit" value="Create">
+<html lang="en">
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <title>Bookmark Manager</title>
+  <link href="css/general.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<header>
+		<h1>Bookmark Manager</h1>
+	</header>
+  <nav>
+        <% if session[:name] %>   
+          <a href="/logout">Log Out</a>
+        <% end %>
+        <a href="/">Home</a>
+  </nav>
+	<main>
+		<div class="contentSmallForm">
+			<h2>Adding Bookmarks</h2>
+			<form method="post" action="/adding_bookmarks">
+            <p>
+            Title<input name="bm_title" type="text" value="">
+            Content<input name="bm_content" type="text" value="">
+            Description<input name="bm_description" type="text" value="">
+            </p>
+            <input type="submit" value="Add">
         </form>
-        
-        
-    </body>
+	</main>
+	<footer>
+		<ul>
+			<li><a href="/">Back to homepage</a></li>
+		</ul>
+		<hr>
+		<p>COM1001, 2020</p>
+	</footer>
+
+</body>
 </html>
-
-
-
-
