fixed autocomplete typing error

--- a/views/templateLogin.erb
+++ b/views/templateLogin.erb
@@ -20,10 +20,10 @@
 			<h2>Log In</h2>
 			<form method='post' action="/login">
            <p>
-            Username:<input name="name" type="text" value="<%=@name%>" autocomplete="off">
+            Username:<input name="name" type="text" value="<%=@name%>">
             </p>
             <p>
-            Password:<input name="password" type="password" value="<%=@password%>" autocomplete="off">
+            Password:<input name="password" type="password" value="<%=@password%>">
             </p>
             <input type="submit" value="Login">
         </form>
