--- a/views/all_users.erb
+++ b/views/all_users.erb
@@ -1,30 +1,69 @@
 <!DOCTYPE>
-<html>
-    <head>
-       <title>list</title>
-    </head>
-    <body>
+<html lang="en">
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <title>Bookmark Manager</title>
+  <link href="css/general.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<header>
+		<h1>Bookmark Manager</h1>
+	</header>
+  <nav>
+        <a href="/logout">Log Out</a>
+        <a href="/">Home</a>
+  </nav>
+	<main>
+		<div class="contentSmallForm">
+			<h2>View Users</h2>
+      <div class="TableHolder">
+      <table>
+        <tr><th>ID</th><th>Firstname</th><th>Surname</th><th>Access Level</th><th>Status</th><th></th></th><th>Details</th></tr>
         <% @list.each do |user| %>
-           <form method="post" action="/check_all_users/suspend">
-            <p>
-            <input type="hidden" name="id" value="<%=user[:id]%>">
-            </p>
-             <%=user[:id]%> <%=user[:firstname]%> <%=user[:surname]%> <%=user[:access_level]%> <%=user[:suspended]%>
-               <p><input type="submit" value="Suspend"></p>
-           </form>
-           <form method="post" action="/check_all_users/unsuspend">
-            <p>
-            <input type="hidden" name="id" value="<%=user[:id]%>">
-            </p>
-                 <input type="submit" value="UnSuspend">
-           </form>
-           <form method="get" action="/check_all_users/details">
+          <tr>
+              <td><%=user[:id]%></td>
+              <td><%=user[:firstname]%></td>
+              <td><%=user[:surname]%></td>
+              <td><%=user[:access_level]%></td>
+              <% if user[:suspended] == 1 %>
+              <td>Suspended</td>
+              <td>
+                  <form method="post" action="/check_all_users/unsuspend">
+                  <p><input type="hidden" name="idu" value="<%=user[:id]%>"></p>
+                  <input type="submit" value="UnSuspend">
+                  </form>
+              </td>
+              <% end %>
+              <% if user[:suspended] == 0 %>
+              <td>Unsuspended</td>
+              <td>
+                  <form method="post" action="/check_all_users/suspend">
+                  <p><input type="hidden" name="ids" value="<%=user[:id]%>"></p>
+                  <input type="submit" value="Suspend">
+                  </form>
+              </td>
+              <% end %>
+              
+              <td>
+                  <form method="get" action="/check_all_users/details">
                <input type="hidden" name="id" value="<%=user[:id]%>">
                  <input type="submit" value="Details">
            </form>
-        <% end %>
-         <form method="get" action="/check_all_users/back">
-                 <input type="submit" value="Back">
-          </form>       
-    </body>
+              </td>
+          </tr>
+        <% end %>  
+      </table>
+    </div>
+	</main>
+	<footer>
+		<ul>
+			<li><a href="/">Back to homepage</a></li>
+		</ul>
+		<hr>
+		<p>COM1001, 2020</p>
+	</footer>
+
+</body>
 </html>
