--- a/views/details.erb
+++ b/views/details.erb
@@ -1,16 +1,32 @@
 <!DOCTYPE>
-<html>
-    <head>
-        <title>details</title>
-    </head>
-    <body>   
-            <p>user_id: <%=@id%></p>
-            <p>firstname: <%=@firstname%></p>
-            <p>surname: <%=@surname%></p>
-            <p>email: <%=@email%></p>
-            <p>phone: <%=@phone%></p>
-            <p>password: <%=@password%></p>
-            <p>access level: <%=@access_level%></p>   
+<html lang="en">
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <title>Bookmark Manager</title>
+   <link href="../../css/general.css" rel="stylesheet" type="text/css" />
+  <link href="../css/general.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<header>
+		<h1>Bookmark Manager</h1>
+	</header>
+  <nav>
+        <a href="/logout">Log Out</a>
+        <a href="/">Home</a>
+        <a href="/check_all_users/details/back">Back To Users</a>
+  </nav>
+	<main>
+		<div class="contentSmallForm">
+			<h2>Details for <%=@firstname%> <%=@surname%></h2>
+      <p>user_id: <%=@id%></p>
+            <p>Firstname: <%=@firstname%></p>
+            <p>Surname: <%=@surname%></p>
+            <p>Email: <%=@email%></p>
+            <p>Phone: <%=@phone%></p>
+            <p>Password: <%=@password%></p>
+            <p>Access Level: <%=@access_level%></p>   
           <form method="post" action="/check_all_users/details/set_role">
             <input type="hidden" name="id" value="<%=@id%>">
             <select name="access_level">
@@ -24,8 +40,15 @@
             <input type="hidden" name="id" value="<%=@id%>">
             <input type="submit" value="Reset password">
           </form>
-          <form method="get" action="/check_all_users/details/back">
-                 <input type="submit" value="Back">
-          </form>   
-    </body>
+    </div>
+	</main>
+	<footer>
+		<ul>
+			<li><a href="/">Back to homepage</a></li>
+		</ul>
+		<hr>
+		<p>COM1001, 2020</p>
+	</footer>
+
+</body>
 </html>
