added final bit of css

--- a/views/set_password.erb
+++ b/views/set_password.erb
@@ -1,14 +1,39 @@
 <!DOCTYPE>
-<html>
-    <head>
-       <title>set password</title>
-    </head>
-    <body>
-          <form method="post" action="/check_all_users/details/set_password">
+<html lang="en">
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <title>Bookmark Manager</title>
+   <link href="../../css/general.css" rel="stylesheet" type="text/css" />
+  <link href="../css/general.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <header>
+    <h1>Bookmark Manager</h1>
+  </header>
+  <nav>
+        <a href="/logout">Log Out</a>
+        <a href="/">Home</a>
+        <a href="/check_all_users/details/back">Back To Users</a>
+  </nav>
+  <main>
+    <div class="contentSmallForm">
+      <h2>Set password for <%=@firstname%> <%=@surname%></h2>
+      <form method="post" action="/check_all_users/details/set_password">
             <input type="hidden" name="id" value="<%=@id%>">
-            new password<input type="text" name="new_password" value="<%@newPassword%>">
+            <p>New Password:<input type="text" name="new_password" value="<%@newPassword%>"></p>
             <input type="submit" value="Submit">
           </form>
-    </body>
+    </div>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="/">Back to homepage</a></li>
+    </ul>
+    <hr>
+    <p>COM1001, 2020</p>
+  </footer>
 
+</body>
 </html>
