only admin/employee can add bookmarks - adding doesn't work yet

--- a/views/adding_bookmarks.erb
+++ b/views/adding_bookmarks.erb
@@ -26,6 +26,7 @@
             Content<input name="bm_content" type="text" value="">
             Description<input name="bm_description" type="text" value="">
             </p>
+            <input name="bm_author" type="hidden" value="<%=@name%>">
             <input type="submit" value="Add">
         </form>
 	</main>
