--- a/views/home.erb
+++ b/views/home.erb
@@ -34,10 +34,11 @@
            			<input type="submit" value="View Users">  
          		</form> 
         	<% end %>
-
+            <%if session[:role]=="admin" || session[:role]=="employee"  %>
             <form  methood='get' action='/adding_bookmarks'>
            		<input type="submit" value="Add Bookmarks">  
         	</form> 
+            <% end %>
         	<script>     
 	            const params = new URLSearchParams(window.location.search);
 	            if (params.has('alert1')) {
