--- a/views/set_password.erb
+++ b/views/set_password.erb
@@ -24,8 +24,16 @@
             <input type="hidden" name="id" value="<%=@id%>">
             <p>New Password:<input type="text" name="new_password" value="<%@newPassword%>"></p>
             <input type="submit" value="Submit">
-          </form>
+      </form>
+       <form method="get" action="/check_all_users/details">
+           <input type="hidden" name="id" value="<%=@id%>">
+           <input type="submit" value="Cancel"> 
+        </form> 
+        <%if @validation==false %>
+          <p id=failure_text>You should type something before you submit.</p>
+        <% end %>
     </div>
+        
   </main>
   <footer>
     <ul>
