Add password comfirm and a Search bar to search users

--- a/views/adding_bookmarks.erb
+++ b/views/adding_bookmarks.erb
@@ -29,6 +29,7 @@
             <input name="bm_author" type="hidden" value="<%=@name%>">
             <input type="submit" value="Add">
         </form>
+        </div>
 	</main>
 	<footer>
 		<ul>
