--- a/views/logout.erb
+++ b/views/logout.erb
@@ -21,6 +21,7 @@
 			<h2>Logged Out</h2>
 			<p>You have succesfully logged out.</p>
 			<p>Thank you for using Bookmark Manager</p>
+        </div>
 	</main>
 	<footer>
 		<ul>
