--- a/views/login.erb
+++ b/views/login.erb
@@ -36,6 +36,7 @@
        <%if @suspend==true %>
           <p id="failure_text">Your account has been suspended. Please contact admin.</p>
        <% end %> 
+        </div>
 	</main>
 	<footer>
 		<ul>
