fixed footer issue

--- a/views/home.erb
+++ b/views/home.erb
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <title>Bookmark Manager</title>
   <link href="css/general.css" rel="stylesheet" type="text/css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
 </head>
 <body>
+   <div id="page-container">
+   <div id="content-wrap">
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
@@ -43,10 +45,12 @@
        
         </div>
 	</main>
+    </div>
 	<footer>
 		<hr>
 		<p>COM1001, 2020</p>
 	</footer>
+    </div>
 
 </body>
 </html>
