--- a/views/logout.erb
+++ b/views/logout.erb
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+   <div id="page-container">
+   <div id="content-wrap">
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
@@ -23,6 +25,7 @@
 			<p>Thank you for using Bookmark Manager</p>
         </div>
 	</main>
+    </div>
 	<footer>
 		<ul>
 			<li><a href="/">Back to homepage</a></li>
@@ -30,6 +33,7 @@
 		<hr>
 		<p>COM1001, 2020</p>
 	</footer>
+    </div>
 
 </body>
 </html>
