--- a/views/register.erb
+++ b/views/register.erb
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <title>Bookmark Manager</title>
   <link href="css/general.css" rel="stylesheet" type="text/css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+   <div id="page-container">
+   <div id="content-wrap">
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
@@ -40,6 +41,7 @@
         <% end %>
         </div>
 	</main>
+    </div>
 	<footer>
 		<ul>
 			<li><a href="/">Back to homepage</a></li>
@@ -47,6 +49,7 @@
 		<hr>
 		<p>COM1001, 2020</p>
 	</footer>
+    </div>
 
 </body>
 </html>
