--- a/public/css/general.css
+++ b/public/css/general.css
@@ -49,7 +49,7 @@ nav a:hover{
 
 
 .contentSmallForm{
-	margin: 100px 25% 10px 25%;
+	margin: 100px 25% 75px 25%;
 	height:auto;
 	width:50%;
 	border-radius: 0.2em;
@@ -132,7 +132,8 @@ tr:hover {
     background-color:#f5f5f5;
     }
 .TableHolder{
-    height: 500px;
+    height: auto;
+    max-height:400px;
     overflow: auto;
 }
 select{
@@ -143,4 +144,12 @@ select{
   padding: 10px 3% 10px 3%;
   margin: 0 0 8px 3%;
   font-size: 1em;
+}
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 120px;
 }
