--- a/views/all_users.erb
+++ b/views/all_users.erb
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+   <div id="page-container">
+   <div id="content-wrap">
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
@@ -62,6 +64,7 @@
       </div>
      </div>
 	</main>
+    </div>
 	<footer>
 		<ul>
 			<li><a href="/">Back to homepage</a></li>
@@ -70,5 +73,6 @@
 		<hr>
 		<p>COM1001, 2020</p>
 	</footer>
+    </div>
 </body>
 </html>
