--- a/views/details.erb
+++ b/views/details.erb
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+   <div id="page-container">
+   <div id="content-wrap">
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
@@ -42,6 +44,7 @@
           </form>
     </div>
 	</main>
+    </div>
 	<footer>
 		<ul>
 			<li><a href="/">Back to homepage</a></li>
@@ -49,6 +52,7 @@
 		<hr>
 		<p>COM1001, 2020</p>
 	</footer>
+    </div>
 
 </body>
 </html>
