finish the same email exception, create the template bookmark page and update the database

--- a/views/home.erb
+++ b/views/home.erb
@@ -42,6 +42,14 @@
         	</form> 
 
             <% end %>
+            <% if !session[:login] %>
+             <h2>View as a guest</h2>
+            <%end%>
+            <form  methood='get' action='/view_bookmarks'>
+                  <input type="submit" value="View all bookmarks">
+            </form> 
+        	
+            
        
         </div>
 	</main>
